--- a/Views/Todo/Index.cshtml
+++ b/Views/Todo/Index.cshtml
@@ -1,55 +1,104 @@
-﻿@model IEnumerable<TodoWeb.Models.TodoItem>
+﻿@model SearchViewModel
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Jobs to do!!</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add new task</a>
 </p>
+<p>
+    @if (Model.ShowAll)
+    {
+        <a asp-action="Index" asp-route-showall="false">Show Only Incomplete</a>
+    }
+    else
+    {
+        <a asp-action="Index" asp-route-showall="true">ShowAll</a>
+    }
+
+</p>
+
+
+<form asp-action="Index" asp-controller="Todo" method="get">
+    <div class="form-group">
+        <label asp-for="SearchText" class="control-label"></label>
+        <input asp-for="SearchText" class="form-control" />
+
+    </div>
+    <div class="form-group">
+        <label asp-for="ShowAll" class="control-label"></label>
+        <input asp-for="ShowAll" class="form-control" />
+
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Search" class="btn btn-primary" />
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
+
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                cATEGORY
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                TiTLE
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.isCompleted)
+                DueDate
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DueDate)
+                Remaininghour
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Category)
+                Is Completed
             </th>
+
+
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Result) {
         <tr>
+            <td>
+                @if (item.IsCompleted)
+                {
+                    <del> @Html.DisplayFor(modelItem => item.Category.Name)</del>
+                }
+                else
+                {
+                    @Html.DisplayFor(modelItem => item.Category.Name)
+                }
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.isCompleted)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.DueDate)
             </td>
+            <th>
+                @Html.DisplayFor(model => item.RemainingHour)
+            </th>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.Id)
+                @Html.DisplayFor(modelItem => item.IsCompleted)
             </td>
+
+
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                @if (item.IsCompleted)
+                {
+                    <a asp-action="MakeInComplete" asp-route-id="@item.Id"asp-route-showAll="@Model.ShowAll">InComplete</a> 
+}
+else
+{
+            <a asp-action="MakeComplete" asp-route-id="@item.Id"asp-route-showAll="@Model.ShowAll">Complete</a> 
+}
+
+               |  <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
