--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<TodoWeb.Models.Category>
-
+﻿@model SearchViewModel
 @{
     ViewData["Title"] = "Index";
 }
@@ -9,20 +8,39 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-action="Index" asp-controller="Categories" method="get">
+    <div class="form-group">
+        <label type="submit" asp-for="SearchText" class="control-label"></label>
+        <input asp-for="SearchText" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="SearchInDescription" class="control-label"></label>
+        <input asp-for="SearchInDescription" class="form-control" />
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Search" class="btn btn-primary" />
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+             Name
+            </th>
+            <th>
+              Description
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.CategoryResult) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
