--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,6 +9,9 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+@if (User.Identity.IsAuthenticated)
+{
+
 
 @if (!Model.Any())//Model.Count()==0
 {
@@ -53,4 +56,5 @@ else
             }
         </tbody>
     </table>
+}
 }
