--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Todo" asp-action="Index">Todo</a>
                         </li>
-                        @await Component.InvokeAsync("CategoryMenu")
+                        @await Component.InvokeAsync("CategoryMenu",new { ShowEmpty = false })
                     </ul>
                    
                     <partial name="_LoginPartial" />
