--- a/Views/Todo/Index.cshtml
+++ b/Views/Todo/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Jobs to do!!</h1>
+<h1>Upcoming Events</h1>
 
 <p>
-    <a asp-action="Create">Add new task</a>
+    <a asp-action="Create">Add a new event</a>
 </p>
 <p>
     @if (Model.ShowAll)
